--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   text-align: center;
 
+  margin-top: 10px;
   width: auto;
   height: 150px;
 
@@ -24,21 +25,5 @@
 
 .title {
   margin: 40px 0 0 0;
-  font-size: large;
-}
-
-.item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-}
-
-.label {
-  font-size: medium;
-}
-
-.percentage {
   font-size: large;
 }
